deploy/launchpad/overlays/arena/gitops-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-gitops-operator
