deploy/launchpad/overlays/arena/patch-routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: launchpad
spec:
  host: launchpad.apps.arena.fm2aihpcsed.com
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: launchpad-admin
spec:
  host: launchpad-admin.apps.arena.fm2aihpcsed.com
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: launchpad-api
spec:
  host: launchpad-api.apps.arena.fm2aihpcsed.com
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
